--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,10 @@ spring.jpa.properties.hibernate.default_schema=parser
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
 
 
+spring.freemarker.expose-request-attributes=true
+spring.freemarker.template-loader-path=classpath:/templates
+spring.freemarker.suffix=.ftl
+
 
 
 # output to a file
